# mdict_tools

./: .env  .gitignore  Cargo.toml  README.md  boltffi.toml  create-framework.sh  key_info_block.txt
crates/mdict_tools/: Cargo.toml  test.txt
crates/mdict_tools/src/: error.rs  lib.rs  mdict.rs  prefix_key_block_index.rs  random_access_key_blocks.rs  types.rs
crates/mdict_tools/src/format/: header.rs  key_block.rs
crates/mdict_tools/tests/: edge_cases.rs  main_test.rs
crates/mdict_uniffi/: Cargo.toml
crates/mdict_uniffi/src/: lib.rs
docs/: packed_storage.md
src/: error.rs  lib.rs  mdict.rs  mdict_file.rs  mdict_optimized.rs  prefix_key_block_index.rs  random_access_key_blocks.rs  seekable_mmap.rs  shared_macros.rs  types.rs
src/compressed_block/: block.rs
src/file_reader/: file_reader.rs  mod.rs  xml_parser.rs
src/format/: compressed_block.rs  header.rs  key_block.rs  key_index.rs  mod.rs  records.rs  versioned_binrw.rs
src/header/: parser.rs
src/io/: mod.rs
src/key_index/: mod.rs  parser.rs  search_result.rs
src/mdx_conversion/: fst_indexing.rs  fst_map.rs  mod.rs  readings.rs  records.rs  reindexing.rs
src/packed_storage/: encoding.rs  header.rs  index.rs  mod.rs  tests.rs  writer.rs
src/records/: parser.rs
src/search/: iter.rs  mod.rs  prefix.rs
tests/: edge_cases.rs  main_test.rs  uniffi_api_test.rs
