[package]
name = "mdict_tools"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
xmlparser = "0.13.6"
log = "0.4.25"
zune-inflate = "0.2.54"
paste = "1.0.15"
minilzo-rs = "0.6.1"
regex = "1.11.1"
binrw = "0.15.0"
uniffi = { version = "0.31.0", features = ["cli"] }
thiserror = "2.0.18"
memmap2 = "0.9.10"

[build-dependencies]
uniffi = { version = "0.31.0", features = [ "build" ] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dev-dependencies]
get-size2 = "0.7.4"
sysinfo = "0.38.2"
