[package]
name = "mdict_uniffi"
version = "0.1.0"
edition = "2021"

[dependencies]
mdict_tools = { path = "../mdict_tools" }
uniffi = "0.30"
uniffi_macros = "0.30"

[build-dependencies]
# no-op build script is present; keep build-deps minimal to avoid pulling
# uniffi_build versions that may not be published.

[package.metadata.uniffi]
# Using proc-macros to emit metadata; no UDL file required for this crate.

[lib]
crate-type = ["cdylib", "staticlib"]
name = "mdict_uniffi"